Added new flag to use IDs instead of chan names

--- a/.env.template
+++ b/.env.template
@@ -20,3 +20,6 @@ LOOKBACK_DAYS=28
 
 # This is the text said by the bot before printing the pairs. The bot also uses it to find messages that contain the previous pairs.
 MAGICAL_TEXT='This weeks random coffees are'
+
+# Set to True (or Yes, or 1, or t, or y) if you use channel IDs, like C01234567, instead of channel names. This avoids the costly and rate-limited calls to conversation.list
+CHAN_NAMES_ARE_IDS="False"
